--- a/hm.tex
+++ b/hm.tex
@@ -136,7 +136,7 @@ linktoc=page}
 \thispagestyle{empty}
 \null\vfill
 \begin{center}
-    Version 1.3\\
+    Version 1.3.1\\
     \today
 \end{center}
 \vfill
@@ -865,7 +865,7 @@ As for the euclidean case, given a lagrangian $L$ we can define a functional $S$
 \begin{equation}
     S[q] = \int_{t_1}^{t_2} L(q,\dot q) \d t.
 \end{equation}
-It turns out that also in this case the critical points of the functional are determined by the Euler-Lagrange equations
+It turns out\footnote{Truth be told, we are hiding some extra complications involving infinite dimensional manifolds here, for a full account of the theory involved you can refer to \cite[Chapters 7 and 8]{book:marsdenratiu}.} that also in this case the critical points of the functional are determined by the Euler-Lagrange equations
 \begin{equation}
     \frac{\d}{\d t}\frac{\partial L}{\partial \dot q^i} - \frac{\partial L}{\partial q^i} =0, \quad i=1,\ldots,n,
 \end{equation}
@@ -874,10 +874,11 @@ Under the time-independence and non--degeneracy conditions, the lagrangian defin
 
 As we have seen, for a system of $N$ point particles, the configuration space is simply $M=\R^{3N}$. Mechanical systems on more general configuration spaces usually appear once we consider systems with certain type of constraints or systems that have undergone symmetry reductions.
 Bear some patience, we will come back to this soon.
+\medskip
 
-An important class of mechanical systems is defined on riemannian manifolds: a riemannian manifold $(M, g)$ is a smooth manifold $M$ equipped with an inner product $g_q$ on $T_q M$ which varies smoothly with $q$, i.e. a symmetric $(0,2)$-tensor with the positive definite matrix $g_{ij}(q)$. Locally,
+An important class of mechanical systems is defined on riemannian manifolds: a riemannian manifold $(M, g)$ is a smooth manifold $M$ equipped with an inner product $g_q$ on $T_q M$ which varies smoothly with $q$, i.e. a symmetric $(0,2)$-tensor on $TM$ whose matrix representation $g_{ij}(q)$ is positive definite. Locally,
 \begin{equation}
-    \d s^2 = g_{ij}(q) \d q^i \d q^j.
+    g = g_{ij}(q) \d q^i \d q^j =: \d s^2.
 \end{equation}
 
 The length of curves on $M$ is then defined as in \eqref{eq:arclen} and angles between tangent vectors are defined using the inner product on $T_qM$:
@@ -891,7 +892,7 @@ As in the Euclidean space, arc lengths of curves are invariant with respect to m
 
 Replacing the scalar product, i.e. the inner product in the Euclidean space, we can define the kinetic energy of a point particle with mass $m$ as
 \begin{equation}
-    T = \frac{m}2 g_{ij}(q)\dot q^i\dot q^j = \frac m2 \lag\dot q, \dot q\rag_g.
+    T = \frac m2 \lag\dot q, \dot q\rag_g = \frac{m}2 g_{ij}(q)\dot q^i\dot q^j.
 \end{equation}
 
 \begin{exercise}\label{exe:geodesic1}
@@ -980,7 +981,7 @@ where $U(q)$ is a smooth function on $M$.
 
 Consider the equation
 \begin{equation}\label{eq:oscillator}
-    \ddot x = - F(x), \qquad F:\R\to\R, \quad t\in R.
+    \ddot x = F(x), \qquad F:\R\to\R, \quad t\in R.
 \end{equation}
 It should come at no surprise, that introducing the auxiliary variable $y(t) = \dot x(t)$, \eqref{eq:oscillator} is equivalent to the system of first order equations
 \begin{equation}\label{eq:oscillatorfirstorder}
@@ -1064,7 +1065,7 @@ In other words, if the function $I$ remains constant along the paths followed by
 \begin{theorem}\label{thm:conservationEnergy}
 If the lagrangian of the mechanical system does not explicitly depend on time, $L = L(q, \dot q)$, then the \emph{energy} of the system
 \begin{equation}\label{eq:energy1}
-    E(q,\dot q) = p_i \dot q^i - L,\qquad p_i = \frac{\partial L}{\partial \dot q^i}
+    E(q,\dot q) = p_i \dot q^i - L,\qquad p_i := \frac{\partial L}{\partial \dot q^i}
 \end{equation}
 is conserved.
 \end{theorem}
@@ -1073,42 +1074,42 @@ is conserved.
     \begin{equation}
         \frac{\d}{\d t} L
         = \frac{\partial L}{\partial q^i} \dot q^i + \frac{\partial L}{\partial \dot q^i} \ddot q^i
-        = \dot q^i \frac{\d}{\d t} \frac{\partial L}{\partial \dot q^i} + \frac{\partial L}{\partial \dot q^i} \ddot q^i
+        \overset{\text{(EL)}}{=} \dot q^i \frac{\d}{\d t} \frac{\partial L}{\partial \dot q^i} + \frac{\partial L}{\partial \dot q^i} \ddot q^i
         = \frac{\d}{\d t}\left(\frac{\partial L}{\partial \dot q^i} \dot q^i\right),
     \end{equation}
-    that is
+    that is,
     \begin{equation}
         \frac{\d}{\d t}\left(\frac{\partial L}{\partial \dot q^i} \dot q^i - L\right) = 0.
     \end{equation}
 \end{proof}
 
 \begin{example}\label{ex:natlagham}
-    Let's consider $N$ point particles with natural lagrangian $L = T - U$ as in \eqref{eq:mechlag}.
+    Let's consider $N$ point particles in physical space with natural lagrangian $L = T - U$ as in \eqref{eq:mechlag}.
     Then,
     \begin{equation}
         \bp_k = \frac{\partial L}{\partial \dot\bx_k} = m_k \dot \bx_k,
     \end{equation}
     and therefore
     \begin{equation}
-        \sum_{k=1}^{N} (\bp_k, \dot\bx_k) = \sum_{k=1}^{N} m_k \dot \bx^2 = 2 T
+        \sum_{k=1}^{N} \lag\bp_k, \dot\bx_k\rag = \sum_{k=1}^{N} m_k \|\dot\bx\|^2 = 2 T
     \end{equation}
     which implies that the energy of the mechanical system is
     \begin{equation}\label{eq:energyFromL}
         E = 2T - T + U = T + U.
     \end{equation}
-    Defining the kinetic momentum $p_k := m_k \dot \bx_k$, we get $E = H(q,p)$, the sum of kinetic and potential energies, as in \eqref{eq:energyKepler} and Theorem \ref{thm:ham1}.
+    Defining the kinetic momentum $\bp_k := m_k \dot \bx_k$, we get $E = H(q,p) := \frac{1}{m_k}\|\bp_k\|^2 + U$, the sum of kinetic and potential energies, as in \eqref{eq:energyKepler} and Theorem \ref{thm:ham1}.
 \end{example}
 
 \begin{remark}
     This is probably a good point to discuss the question: why does nature want to minimize the action? And why the lagrangian is of the form \eqref{eq:mechlag}?
 
     Theorem~\ref{thm:conservationEnergy} tells us that the total energy is conserved, and \eqref{eq:energyFromL} tells us that for closed systems this implies that the energy is transferred back and forth between the kinetic and the potential components.
-    We saw towards the end of Section~\ref{sec:dynamicspps} that while the kinetic energy measures how much the system is moving around, the potential energy measures the capacity of the system to change: its name really means `potential' in the sense of yet unexpressed possibilities.
+    We saw towards the end of Section~\ref{sec:dynamicspps} that while the kinetic energy measures how much the system is moving around, the potential energy measures the capacity of the system to change: its name can be intended as `potential' in the sense of yet unexpressed possibilities.
 
     Looking at the lagrangian itself, we see that it is minimal when the potential energy is large and maximal when the kinetic energy is large.
     So, the lagrangian measures in some sense how `active' a system is: the higher the kinetic energy the more active a system is, and the higher the potential energy the less active the system.
     %
-    The principle of least action tells us that nature is lazy: she likes to find a compromise that minimize its activity over time, i.e. its total action.
+    The principle of least action tells us that nature is lazy: she likes to find a compromise that minimizes its activity over time, i.e. its total action.
 
     You can read a nice historical account on how scientists came up with the principle of least action in \cite{lectures:baez}.
 \end{remark}
@@ -1152,7 +1153,7 @@ As we have seen in Section~\ref{sec:bdf}, the conservation of energy,
 \begin{equation}\label{eq:cenergy1}
     \frac{m \dot x^2}{2} + U(x) = E \in\R \mbox{ constant},
 \end{equation}
-allows us to explicitly describe phase curves, i.e. solutions of the equations of motion in the plane $(x, y = \dot x)$.
+allows us to explicitly describe phase curves, i.e. solutions of the equations of motion in the plane $(x, y := \dot x)$.
 On each phase curve the value of the energy is constant, so the phase curve lies entirely in one energy level (the set of points $H(x,y)=E$).
 
 More explicitly, we can use \eqref{eq:cenergy1} to integrate the equations of motion
@@ -1392,7 +1393,7 @@ Let's make another example before entering into the gist of the matter.
     \end{eqnarray}
     then the coordinate $q^i$ is said to be \emph{cyclic} and the kinetic momentum
     \begin{eqnarray}
-        p_j = \frac{\partial L}{\partial\dot q^j}
+        p_j := \frac{\partial L}{\partial\dot q^j}
     \end{eqnarray}
     is a conserved quantity.
 
