--- a/hm.tex
+++ b/hm.tex
@@ -177,7 +177,7 @@ Last year there were two non-standard notational conventions that I decided to a
 
 Please don't be afraid to send me comments to improve the course or the text and to fix the many typos that will surely be in this first draft. They will be very appreciated.
 
-I am extremely grateful to Albert \v{S}ilvans, \emph{your name here}, for their careful reading of the notes and their useful comments and corrections.
+I am extremely grateful to Albert \v{S}ilvans for their careful reading of the notes and their useful comments and corrections.
 
 \chapter{Classical mechanics, from Newton to Lagrange and back}
 
