--- a/hm.tex
+++ b/hm.tex
@@ -407,7 +407,7 @@ It is possible to show that the space of curves
     \|\gamma\|_X :=
     \|\gamma\|_\infty + \|\dot \gamma\|_\infty + \|\ddot \gamma\|_\infty,
 \end{equation}
-is a Banach space, and $X_0 = \big\{h\in X \mid h(0) = h(t) = 0\big\}$ with the induced norm, is a Banach subspace of $X$. % do you mean h(t_1)=h(t_2)=0? The end point argument in the proof of the next theorem does not make sense otherwise. 
+is a Banach space, and $X_0 = \big\{h\in X \mid h(t_1) = h(t_2) = 0\big\}$ with the induced norm, is a Banach subspace of $X$. 
 
 Therefore, the action defined above is a functional
 \begin{equation}
