--- a/hm.tex
+++ b/hm.tex
@@ -416,7 +416,7 @@ Therefore, the action defined above is a functional
 and the evolution of the system is described by the critical points with respect to $X_0$ of $S$ on the space of $\gamma \in X$ with prescribed endpoints.
 
 \begin{theorem}
-    Let $L = L(q, \dot q, t) : T\R^{n}\times\R \to \R$ be differentiable.
+    Let $L = L(q, \dot q, t) : T\R^{n}\times\R = R^{n}\times R^{n}\times R \to \R$ be differentiable.
     The equations of motion for the mechanical system with lagrangian $L$ satisfy the \emph{Euler-Lagrange equations}
     \begin{equation}\label{eq:eulerlagrange}
         \frac{\d}{\d t}\frac{\partial L}{\partial \dot q^i} - \frac{\partial L}{\partial q^i} = 0, \quad i=1,\ldots n.
