--- a/hm.tex
+++ b/hm.tex
@@ -464,7 +464,7 @@ and the evolution of the system is described by the critical points with respect
         \end{split}
     \end{equation}
 
-    The differential $DS(\gamma): X \to \R$ can now be read from the equation above and is well-defined and is a bounded linear operator for all $\gamma\in X$.
+    The differential $DS(\gamma): X \to \R$ can now be read from the equation above and is well--defined and is a bounded linear operator for all $\gamma\in X$.
 
     For $h\in X_0$, the first term $\left\lag\frac{\partial L}{\partial \dot q}(\gamma, \dot \gamma, s),\; h(s)\right\rag\Big|_{t_1}^{t_2}$ has to vanish. Therefore, for $\gamma$ to be a critical point for $S$ it follows that the inner product
     \begin{equation}
