--- a/hm.tex
+++ b/hm.tex
@@ -511,7 +511,7 @@ and the evolution of the system is described by the critical points with respect
 \end{corollary}
 
 \begin{proof}
-    For a non--degenerate lagrangian, the Euler-Lagrange equations can be rewritten in the form %by the implicit function theorem?
+    For a non--degenerate lagrangian, a direct computation shows that the Euler-Lagrange equations can be rewritten in the form
     \begin{equation}
         \ddot q^i = f^i(q,\dot q, t)
         := \Lambda^{ij}\left(\frac{\partial L}{\partial q^j} - \frac{\partial^2 L}{\partial \dot q^j \partial q^k} \dot q^k - \frac{\partial^2 L}{\partial\dot q^j \partial t}\right),
