--- a/hm.tex
+++ b/hm.tex
@@ -1336,7 +1336,7 @@ On the configuration plane $(x_1, x_2)$, the motion that we observe is
 \begin{equation}
     x(t) = \left( R_1 \cos(t + \phi_1),\, R_2 \cos(\omega t + \phi_2) \right).
 \end{equation}
-This is contained in a rectangle $[-R_1,R_1]\times[-R_2,R_2]$. When $\omega$ is irrational, the trajectory fills the rectangle, whereas they are closed curves inside the rectangle when it is rational. % not always closed, the top right example in the figure corresponds to a rational omega but it is not closed.
+This is contained in a rectangle $[-R_1,R_1]\times[-R_2,R_2]$. When $\omega$ is irrational, the trajectory fills the rectangle, whereas they are closed curves inside the rectangle when it is rational.
 See also \cite[Exercise 6.34]{book:knauf} and \cite[Chapter 2.5, Example 2]{book:arnold}.
 \end{example}
 
