--- a/hm.tex
+++ b/hm.tex
@@ -1328,7 +1328,7 @@ The level curves $H=E$ describe a 3-sphere in $\mathbb{R}^4$, which are foliated
 \begin{figure}[ht]
     \centering
     \includegraphics[width=.75\linewidth,trim={0 50pt 0 50pt},clip]{images/lissajous.pdf}
-    \caption{Some casually selected Lissajous figures}
+    \caption{Some casually selected Lissajous figures. The top right example is a degenerate ellipse squeezed to a line, i.e., a closed curve.}
     \label{img:lissajous}
 \end{figure}
 
