Slowly adding pictures
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -264,7 +264,10 @@ Before temporarily moving to Lagrangian mechanics, let's anticipate some of the 
         x(0) = R\cos(\phi) \qquad\mbox{and}\qquad \dot x(0) = -\omega R \sin(\phi).
     \end{equation}
     Clearly, once we know the initial conditions, the full evolution of the solution $x(t)$ is known, in agreement with Newton's principle of determinacy.
-\medskip
+
+    \begin{figure}[ht!]
+        \includegraphics[width=\linewidth]{images/{HM-1.2}.pdf}
+    \end{figure}
 
     Consider, now, a point particle of mass $m$ attached to a pivot on the ceiling via a rigid rod of length $l$.
     Assume the motion is frictionless and happening only in the vertical direction.
