--- a/hm.bib
+++ b/hm.bib
@@ -161,6 +161,17 @@ Bibliography}
   url    = {https://mitpress.mit.edu/books/structure-and-interpretation-classical-mechanics-second-edition}
 }
 
+@incollection{Broer_2009,
+  doi       = {10.1007/978-0-387-30440-3_372},
+  url       = {http://www.math.rug.nl/~broer/pdf/nfpt.pdf},
+  year      = 2009,
+  publisher = {Springer New York},
+  pages     = {6310--6329},
+  author    = {Henk W. Broer},
+  title     = {Normal Forms in Perturbation Theory},
+  booktitle = {Encyclopedia of Complexity and Systems Science}
+}
+
 @article{Broer2004,
   abstract = {Kolmogorov-Arnold-Moser (or KAM) theory was developed for conservative dynamical systems that are nearly integrable. Integrable systems in their phase space usually contain lots of invariant tori, and KAM theory establishes persistence results for such tori, which carry quasi-periodic motions. We sketch this theory, which begins with Kolmogorov's pioneering work.},
   author   = {Broer, Henk W.},
